--- a/src/main/resources/static/css/utils/navigation.css
+++ b/src/main/resources/static/css/utils/navigation.css
@@ -68,7 +68,7 @@
     border-radius: 5px;
 }
 
-#nav input[type='submit']:hover {
+#nav input[type='submit'][type='submit']:hover {
     cursor: pointer;
     color: var(--light-gold);
     font-weight: bolder;
@@ -203,6 +203,34 @@ li::before {
 }
 
 .sidebar-nav>.sidebar-brand a:hover {
+    color: #fff;
+    background: none;
+}
+
+.sidebar-nav li input[type='submit'] {
+    display: block;
+    text-decoration: none;
+    color: #999999;
+    width: 100vw;
+    background-color: transparent;
+    border: none;
+}
+
+.sidebar-nav li input[type='submit']:hover {
+    text-decoration: none;
+    color: #fff;
+    background: rgba(255, 255, 255, 0.2);
+}
+
+.sidebar-nav li input[type='submit']:active, .sidebar-nav li input[type='submit']:focus {
+    text-decoration: none;
+}
+
+.sidebar-nav>.sidebar-brand input[type='submit'] {
+    color: #999999;
+}
+
+.sidebar-nav>.sidebar-brand input[type='submit']:hover {
     color: #fff;
     background: none;
 }
