--- a/src/main/resources/templates/distributorDetails.html
+++ b/src/main/resources/templates/distributorDetails.html
@@ -1,127 +1,73 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en"
+      xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
+>
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-
     <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
 
-    <script src="../static/js/sidebar.js" type="module"></script>
+    <script src="../../js/sidebar.js" type="module"></script>
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../../css/distributorDetails.css"/>
+    <link rel="stylesheet" href="../../css/bootstrap/bootstrapNav.css"/>
 
-    <link rel="stylesheet" href="../static/css/distributorDetails.css"/>
-    <link rel="stylesheet" href="../static/css/bootstrap/bootstrapNav.css"/>
+    <th:block th:replace="~{fragments/head.html}"></th:block>
 
-
-    <link rel="icon" href="../static/images/ace-of-spades.png">
-    <title>Victory</title>
 </head>
 <body>
 
 
 <header>
     <nav id="nav" class="navbar navbar-expand">
-
-        <a href="/"><img src="../static/images/emblem.png"></a>
-
-        <ul id="menu">
-            <li><a href="/catalog">Catalog</a></li>
-            <li><a href="/search">Offers</a></li>
-            <span id="guest-nav">
-                    <li class="guest"><a href="/login">Login</a></li>
-                    <li class="guest"><a href="/register">Register</a></li>
-                </span>
-            <span id="user-nav">
-                    <li class="user"><a href="/create">Wishlist</a></li>
-                    <li id="logoutBtn" class="user"><a href="javascript:void(0)">Logout</a></li>
-            </span>
-        </ul>
-
-        <a href="#" id="menu-toggle" class="navbar-brand">&#9776</a>
+        <th:block th:replace="~{/fragments/navigation.html}"></th:block>
     </nav>
 </header>
 
-<div id="wrapper">
-    <div id="sidebar-wrapper">
-        <ul class="sidebar-nav">
-            <li><a href="#">Catalog</a></li>
-            <li><a href="#">Offers</a></li>
-            <li><a href="#">Login</a></li>
-            <li><a href="#">Register</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Wishlist</a></li>
-            <li><a href="#">Logout</a></li>
-        </ul>
-    </div>
-</div>
+
+<th:block th:replace="~{/fragments/sidebar.html}"></th:block>
 
 <main>
 
-    <div class="container container-contact bootstrap snippets bootdeys bootdey">
+    <div class="container container-contact bootstrap snippets bootdeys bootdey" th:object="${distributor}">
         <div class="row decor-default">
             <div class="col-md-12">
                 <div class="contact">
-                    <div class="controls">
-                        <img src="https://via.placeholder.com/900x320/FF69B4/000000" alt="cover" class="cover">
+                    <div class="controls" th:if="*{pictures.size()>0}">
+                        <img th:src="@{*{pictures[0].url}}" alt="cover" class="cover">
+                    </div>
+                    <div class="controls" th:unless="*{pictures.size()>0}">
+                        <img src="../static/images/distributor-8-499357.png" th:src="@{/images/distributor-8-499357.png}" alt="cover" class="cover">
                     </div>
 
                     <div class="row">
                         <div class="col-md-4 col-md-5 col-xs-12">
                             <div class="row">
                                 <div class="col-xs-3">
-                                    Email:
+                                    Brand:
                                 </div>
-                                <div class="col-xs-9">
-                                    example@yourdomain.com
-                                </div>
-                                <div class="col-xs-3">
-                                    Phone:
-                                </div>
-                                <div class="col-xs-9">
-                                    +1-800-600-9898
+                                <div class="col-xs-9" th:text="*{brand}">
+
                                 </div>
                                 <div class="col-xs-3">
-                                    Address:
+                                    Decks:
                                 </div>
                                 <div class="col-xs-9">
-                                    Sacramento, CA
-                                </div>
-                                <div class="col-xs-3">
-                                    Birthday:
-                                </div>
-                                <div class="col-xs-9">
-                                    1975/8/17
+                                    <a th:href="@{/decks/search/{brand} (brand=*{brand})}">View All Decks Here</a>
                                 </div>
                                 <div class="col-xs-3">
                                     URL:
                                 </div>
                                 <div class="col-xs-9">
-                                    http://yourdomain.com
+                                    <a th:href="@{siteUrl}" th:text="*{siteUrl}"></a>
                                 </div>
                             </div>
                         </div>
                         <div class="col-lg-8 col-md-7 col-xs-12">
-                            <p class="contact-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed
-                                do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
-                                aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-                                pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
-                                deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit
-                                voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo
-                                inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim
-                                ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur
-                                magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui
-                                dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam
-                                eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.</p>
+                            <p class="contact-description" th:text="*{description}"></p>
                         </div>
                     </div>
                 </div>
