--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -2,13 +2,21 @@
     <div id="wrapper">
         <div id="sidebar-wrapper">
             <ul class="sidebar-nav">
-                <li><a href="#">Catalog</a></li>
-                <li><a href="#">Offers</a></li>
-                <li><a href="#">Login</a></li>
-                <li><a href="#">Register</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Wishlist</a></li>
-                <li><a href="#">Logout</a></li>
+                <th:block sec:authorize="!isAuthenticated()">
+                    <li><a th:href="@{/users/login}">Login</a></li>
+                    <li><a th:href="@{/users/register}">Register</a></li>
+                </th:block>
+                <th:block sec:authorize="isAuthenticated()">
+                    <li><a th:href="@{/decks/all}">Catalog</a></li>
+                    <li><a th:href="@{/offers/all}">Offers</a></li>
+                    <li><a th:href="@{/wishlist}">Wishlist</a></li>
+                    <li>
+                        <form th:action="@{/users/logout}"
+                              th:method="POST">
+                            <input type="submit" value="Logout">
+                        </form>
+                    </li>
+                </th:block>
             </ul>
         </div>
     </div>
