user profile html and css

--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -169,7 +169,7 @@
                             <div class="card-body">
                                 <address>
 
-                                    <div>Choose and address:</div>
+                                    <div>Choose an address:</div>
 
                                     <input type="radio" id="address-1" form="cart-notes" name="address">
                                     <label for="address-1" class="address-option">
