--- a/src/main/resources/templates/fragments/navigation.html
+++ b/src/main/resources/templates/fragments/navigation.html
@@ -10,6 +10,7 @@
         <span id="user-nav" sec:authorize="isAuthenticated()">
                     <li class="user"><a th:href="@{/offers}">Offers</a></li>
                     <li class="user"><a th:href="@{/wishlist}">Wishlist</a></li>
+                    <li class="user"><a th:href="@{/users/profile/{username} (username=${#authentication.name})}">Profile</a></li>
                     <li id="logoutBtn" class="user">
                         <form th:action="@{/users/logout}"
                               th:method="POST">
