--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -11,6 +11,11 @@
                     <li><a th:href="@{/offers/all}">Offers</a></li>
                     <li><a th:href="@{/wishlist}">Wishlist</a></li>
                     <li>
+                        <a th:href="@{/users/profile/{username} (username=${#authentication.name})}">
+                            Profile
+                        </a>
+                    </li>
+                    <li>
                         <form th:action="@{/users/logout}"
                               th:method="POST">
                             <input type="submit" value="Logout">
