--- a/src/main/resources/templates/addAddress.html
+++ b/src/main/resources/templates/addAddress.html
@@ -4,9 +4,6 @@
       xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
 >
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
@@ -21,69 +18,37 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.13.1/js/bootstrap-select.min.js"></script>
 
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../../css/addOffer.css"/>
+    <link rel="stylesheet" href="../../css/bootstrap/bootstrapNav.css"/>
 
-    <link rel="stylesheet" href="../static/css/addOffer.css"/>
-    <link rel="stylesheet" href="../static/css/bootstrap/bootstrapNav.css"/>
+    <script src="../../js/sidebar.js" type="module"></script>
 
-    <script src="../static/js/sidebar.js" type="module"></script>
 
-    <link rel="icon" href="../static/images/ace-of-spades.png">
-    <title>Victory</title>
+    <th:block th:repalce="~{/fragments/head.html}"/>
 </head>
 <body>
 
 <header>
 
     <nav id="nav" class="navbar navbar-expand">
-
-        <a href="/"><img src="../static/images/emblem.png"></a>
-
-        <ul id="menu">
-            <li><a href="/catalog">Catalog</a></li>
-            <li><a href="/search">Offers</a></li>
-            <span id="guest-nav">
-                    <li class="guest"><a href="/login">Login</a></li>
-                    <li class="guest"><a href="/register">Register</a></li>
-                </span>
-            <span id="user-nav">
-                    <li class="user"><a href="/create">Wishlist</a></li>
-                    <li id="logoutBtn" class="user"><a href="javascript:void(0)">Logout</a></li>
-            </span>
-        </ul>
-
-        <a href="#" id="menu-toggle" class="navbar-brand">&#9776</a>
+        <th:block th:replace="~{/fragments/navigation.html}"/>
     </nav>
 
 </header>
 
-<div id="wrapper">
-    <div id="sidebar-wrapper">
-        <ul class="sidebar-nav">
-            <li><a href="#">Catalog</a></li>
-            <li><a href="#">Offers</a></li>
-            <li><a href="#">Login</a></li>
-            <li><a href="#">Register</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Wishlist</a></li>
-            <li><a href="#">Logout</a></li>
-        </ul>
-    </div>
-</div>
+<th:block th:replace="~{/fragments/sidebar.html}"/>
 
 <main>
 
     <div class="container">
         <div class="row">
-            <div class="col-md-6 col-md-offset-3" id="offer-form-cont">
+            <div class="col-md-6 col-md-offset-3" id="address-form-cont">
                 <div class="panel panel-offer">
                     <div class="panel-heading">
                         <div class="row">
 
                             <div class="col">
-                                <label href="#" class="active" id="login-form-link">Add Address</label>
+                                <label class="active" id="address-form-link">Add Address</label>
                             </div>
 
                         </div>
@@ -93,34 +58,45 @@
                             <div class="col-lg-12">
 
 
-                                <form id="deck-form" method="post"
-                                      role="form" style="display: block;">
+                                <form id="address-form" th:action="@{/addresses/add}" th:method="POST"
+                                      role="form" style="display: block;" th:object="${address}">
 
-
                                     <div class="form-group">
-                                        <input type="text" name="username" id="name" tabindex="1"
-                                               class="form-control" placeholder="Title" value="">
+                                        <input type="text" name="country" id="country" tabindex="2"
+                                               class="form-control" placeholder="Country"
+                                                th:field="*{country}" th:errorclass="'invalid-field is-invalid'">
+                                        <div class="error">
+                                            The country should have between 2 and 40 characters.
+                                        </div>
                                     </div>
                                     <div class="form-group">
-                                        <input type="text" name="password" id="country" tabindex="2"
-                                               class="form-control" placeholder="Country">
+                                        <input type="text" name="city" id="city" tabindex="2"
+                                               class="form-control" placeholder="City"
+                                                th:field="*{city}" th:errorclass="'invalid-field is-invalid'">
+                                        <div class="error">
+                                            The city should have between 2 and 100 characters.
+                                        </div>
                                     </div>
                                     <div class="form-group">
-                                        <input type="text" name="password" id="city" tabindex="2"
-                                               class="form-control" placeholder="City">
+                                        <input type="text" name="street" id="street" tabindex="2"
+                                               class="form-control" placeholder="Street"
+                                                th:field="*{street}" th:errorclass="'invalid-field is-invalid'">
+                                        <div class="error">
+                                            The street should have between 2 and 200 characters.
+                                        </div>
                                     </div>
                                     <div class="form-group">
-                                        <input type="text" name="password" id="street" tabindex="2"
-                                               class="form-control" placeholder="Street">
-                                    </div>
-                                    <div class="form-group">
-                                        <input type="text" name="password" id="telephone" tabindex="2"
-                                               class="form-control" placeholder="Telephone">
+                                        <input type="text" name="telephone" id="telephone" tabindex="2"
+                                               class="form-control" placeholder="Telephone"
+                                                th:field="*{telephone}" th:errorclass="'invalid-field is-invalid'">
+                                        <div class="error">
+                                            Please enter a valid number.
+                                        </div>
                                     </div>
 
                                     <div class="form-group">
                                         <div class="col-sm-6 col-sm-offset-3" id="submit-cont">
-                                            <input type="submit" name="login-submit" id="login-submit" tabindex="4"
+                                            <input type="submit" name="address-submit" id="add-address" tabindex="4"
                                                    class="form-control btn btn-makeOffer" value="Add address">
                                         </div>
                                     </div>
@@ -134,7 +110,8 @@
     </div>
 </main>
 
-<footer>&copy Victory 2022. All rights reserved.</footer>
+
+<th:block th:replace="~{/fragments/footer.html}"/>
 
 </body>
 </html>
