--- a/src/main/resources/templates/catalog.html
+++ b/src/main/resources/templates/catalog.html
@@ -143,8 +143,9 @@
 <!--    /*]]>*/-->
 <!--</script>-->
 
-<script th:src="@{/js/backToTop.js}" type="module"></script>
-<script th:src="@{/js/searchbar.js}" type="module"></script>
-<script th:src="@{/js/sidebar.js}" type="module"></script>
+<script th:src="@{/js/backToTop.js}"></script>
+<script th:src="@{/js/searchbar.js}"></script>
+<script th:src="@{/js/sidebar.js}"></script>
+<script th:src="@{/js/search.js}" type="module"></script>
 
 </html>
