--- a/src/main/resources/templates/deckDetails.html
+++ b/src/main/resources/templates/deckDetails.html
@@ -95,7 +95,8 @@
 
 </main>
 
-<footer>&copy Victory 2022. All rights reserved.</footer>
+
+<th:block th:replace="~{/fragments/footer.html}"/>
 
 </body>
 </html>
