--- a/src/main/resources/templates/distributorDetails.html
+++ b/src/main/resources/templates/distributorDetails.html
@@ -77,7 +77,7 @@
 
 </main>
 
-<footer>&copy Victory 2022. All rights reserved.</footer>
+<th:block th:replace="~{/fragments/footer.html}"/>
 
 </body>
 </html>
