--- a/src/main/resources/templates/account.html
+++ b/src/main/resources/templates/account.html
@@ -99,39 +99,30 @@
                                     <div class="form-group">
                                         <input type="text" tabindex="1"
                                                class="form-control" placeholder="Username"
-                                               th:field="*{username}" th:errorclass="invalid-field">
-                                        <div class="error">
-                                            <span th:text="${#strings.listJoin(#fields.errors('username'), '; ')}">
-
-                                            </span>
+                                               th:field="*{username}" th:errorclass="'invalid-field is-invalid'">
+                                        <div class="error" th:text="${#strings.listJoin(#fields.errors('username'), '; ')}">
                                         </div>
                                     </div>
                                     <div class="form-group">
                                         <input type="email" tabindex="1"
                                                class="form-control" placeholder="Email Address"
-                                               th:field="*{email}" th:errorclass="invalid-field">
-                                        <div class="error">
-                                            <span th:text="${#strings.listJoin(#fields.errors('email'), '; ')}">
-
-                                            </span>
+                                               th:field="*{email}" th:errorclass="'invalid-field is-invalid'">
+                                        <div class="error" th:text="${#strings.listJoin(#fields.errors('email'), '; ')}">
                                         </div>
                                     </div>
                                     <div class="form-group">
                                         <input type="password" name="password" id="reg_password" tabindex="2"
                                                class="form-control" placeholder="Password"
-                                               th:field="*{password}" th:errorclass="invalid-field">
-                                        <div class="error">
-                                            <span th:text="${#strings.listJoin(#fields.errors('password'), '; ')}">
-
-                                            </span>
+                                               th:field="*{password}" th:errorclass="'invalid-field is-invalid'">
+                                        <div class="error" th:text="${#strings.listJoin(#fields.errors('password'), '; ')}">
                                         </div>
                                     </div>
                                     <div class="form-group">
                                         <input type="password" tabindex="2"
                                                class="form-control" placeholder="Confirm Password"
-                                               th:field="*{rePass}" th:errorclass="invalid-field">
-                                        <div class="error">
-                                            <span th:text="${#strings.listJoin(#fields.errors('rePass'), '; ')}"></span>
+                                               th:field="*{rePass}" th:errorclass="'invalid-field is-invalid'">
+                                        <div class="error" th:text="${#strings.listJoin(#fields.errors('rePass'), '; ')}">
+
                                         </div>
                                     </div>
                                     <div class="form-group">
@@ -144,8 +135,6 @@
                                         </div>
                                     </div>
                                 </form>
-
-
                             </div>
                         </div>
                     </div>
