--- a/src/main/resources/templates/account.html
+++ b/src/main/resources/templates/account.html
@@ -38,7 +38,7 @@
 
 
                             <div class="col-xs-6">
-                                <a href="/users/login"     id="login-form-link" th:classappend="${form}=='login' ? 'active' : ''" th:disabled="${form}!='login'">Login</a>
+                                <a href="/users/login" id="login-form-link" th:classappend="${form}=='login' ? 'active' : ''" th:disabled="${form}!='login'">Login</a>
                             </div>
 
                             <div class="col-xs-6">
@@ -99,28 +99,28 @@
                                     <div class="form-group">
                                         <input type="text" tabindex="1"
                                                class="form-control" placeholder="Username"
-                                               th:field="*{username}" th:errorclass="'invalid-field is-invalid'">
+                                               th:field="*{username}" th:errorclass="invalid-field">
                                         <div class="error" th:text="${#strings.listJoin(#fields.errors('username'), '; ')}">
                                         </div>
                                     </div>
                                     <div class="form-group">
                                         <input type="email" tabindex="1"
                                                class="form-control" placeholder="Email Address"
-                                               th:field="*{email}" th:errorclass="'invalid-field is-invalid'">
+                                               th:field="*{email}" th:errorclass="invalid-field">
                                         <div class="error" th:text="${#strings.listJoin(#fields.errors('email'), '; ')}">
                                         </div>
                                     </div>
                                     <div class="form-group">
                                         <input type="password" name="password" id="reg_password" tabindex="2"
                                                class="form-control" placeholder="Password"
-                                               th:field="*{password}" th:errorclass="'invalid-field is-invalid'">
+                                               th:field="*{password}" th:errorclass="invalid-field">
                                         <div class="error" th:text="${#strings.listJoin(#fields.errors('password'), '; ')}">
                                         </div>
                                     </div>
                                     <div class="form-group">
                                         <input type="password" tabindex="2"
                                                class="form-control" placeholder="Confirm Password"
-                                               th:field="*{rePass}" th:errorclass="'invalid-field is-invalid'">
+                                               th:field="*{rePass}" th:errorclass="invalid-field">
                                         <div class="error" th:text="${#strings.listJoin(#fields.errors('rePass'), '; ')}">
 
                                         </div>
