--- a/src/main/resources/templates/addOffer.html
+++ b/src/main/resources/templates/addOffer.html
@@ -57,21 +57,23 @@
 
 
                                 <form id="offer-form" th:method="post" th:action="@{/offers/add}"
-                                      role="form" style="display: block;">
+                                      role="form" style="display: block;"
+                                        th:object="${offer}"
+                                >
 
 
                                     <div class="form-group">
-                                        <input type="text" name="username" id="title" tabindex="1"
-                                               class="form-control" placeholder="Title" value=""
-                                                th:field="*{title}" th:errorclass="is-invalid"
+                                        <input type="text" name="username" id="deckTitle" tabindex="1"
+                                               class="form-control" placeholder="Deck Title" value=""
+                                                th:field="*{deckTitle}" th:errorclass="is-invalid"
                                         >
-                                        <div class="error" th:text="${#strings.listJoin(#fields.errors('title'), '; ')}"></div>
+                                        <div class="error" th:text="${#strings.listJoin(#fields.errors('deckTitle'), '; ')}"></div>
                                     </div>
                                     <div class="form-group">
-                                        <input type="text" name="distributor" id="distributor" tabindex="2"
-                                               class="form-control" placeholder="Distributor"
-                                               th:field="*{distributor}" th:errorclass="is-invalid">
-                                        <div class="error" th:text="${#strings.listJoin(#fields.errors('distributor'), '; ')}"></div>
+                                        <input type="text" name="description" id="description" tabindex="2"
+                                               class="form-control" placeholder="Description"
+                                               th:field="*{description}" th:errorclass="is-invalid">
+                                        <div class="error" th:text="${#strings.listJoin(#fields.errors('description'), '; ')}"></div>
                                     </div>
                                     <div class="form-group">
                                         <input type="number" min="0.00" step="0.01" name="price" id="Price" tabindex="2"
@@ -80,26 +82,27 @@
                                         <div class="error" th:text="${#strings.listJoin(#fields.errors('price'), '; ')}"></div>
                                     </div>
                                     <div class="form-group">
-                                        <input type="password" name="creator" id="creator" tabindex="2"
-                                               class="form-control" placeholder="Creator"
-                                               th:field="*{creator}" th:errorclass="is-invalid">
-                                        <div class="error" th:text="${#strings.listJoin(#fields.errors('creator'), '; ')}"></div>
+                                        <input type="number" min="1" step="1" name="quantity" id="quantity" tabindex="2"
+                                               class="form-control" placeholder="Quantity"
+                                               th:field="*{quantity}" th:errorclass="is-invalid">
+                                        <div class="error" th:text="${#strings.listJoin(#fields.errors('quantity'), '; ')}"></div>
                                     </div>
-                                    <div class="form-group">
-                                        <select class="selectpicker" multiple data-live-search="true" name="categories" required
-                                            th:field="*{categories}" th:errorclass="is-invalid"
-                                        >
-                                            <option name="STANDARD">Standard</option>
-                                            <option name="GAME">Game</option>
-                                            <option name="MAGIC">Magic</option>
-                                            <option name="CARDISTRY">Cardistry</option>
-                                            <option name="VINTAGE">Vintage</option>
-                                            <option name="POKER">Poker</option>
-                                            <option name="GAFFED">Gaffed</option>
-                                            <option name="MARKED">Marked</option>
-                                        </select>
-                                        <div class="error" th:text="${#strings.listJoin(#fields.errors('categories'), '; ')}"></div>
-                                    </div>
+<!--                                    <div class="form-group">-->
+<!--                                        <select class="selectpicker" multiple data-live-search="true" name="categories" required-->
+<!--                                            th:field="*{categories}" th:errorclass="is-invalid"-->
+<!--                                        >-->
+<!--                                            <option value=""></option>-->
+<!--                                            <option th:value="STANDARD">Standard</option>-->
+<!--                                            <option th:value="GAME">Game</option>-->
+<!--                                            <option th:value="MAGIC">Magic</option>-->
+<!--                                            <option th:value="CARDISTRY">Cardistry</option>-->
+<!--                                            <option th:value="VINTAGE">Vintage</option>-->
+<!--                                            <option th:value="POKER">Poker</option>-->
+<!--                                            <option th:value="GAFFED">Gaffed</option>-->
+<!--                                            <option th:value="MARKED">Marked</option>-->
+<!--                                        </select>-->
+<!--                                        <div class="error" th:text="${#strings.listJoin(#fields.errors('categories'), '; ')}"></div>-->
+<!--                                    </div>-->
                                     <div class="form-group" id="image-group">
                                         <label for="formFile" class="custom-file-upload">
                                             Click to upload images
